--- a/resources/assets/sass/bulma.scss
+++ b/resources/assets/sass/bulma.scss
@@ -1,5 +1,5 @@
 @import "node_modules/bulma/sass/utilities/initial-variables";
 $primary:#7B37AC;
-$danger:#f00;
+$danger:#f44;
 
 @import "node_modules/bulma/bulma";
